--- a/Dia 33 Countdown/index.html
+++ b/Dia 33 Countdown/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles.css">
     
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <title>Expanding cards</title>
+    <title>Countdown</title>
 </head>
 <body>
     <div class="container">
